[tool.poetry]
name = "comp309"
version = "0.1.0"
description = ""
authors = ["Leon Bowie <leon@bowie-co.nz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
